--- a/css/style.css
+++ b/css/style.css
@@ -99,23 +99,59 @@ body {
   line-height: 1.3;
   text-rendering: optimizeSpeed;
   font-family: "Josefin Sans", sans-serif;
-}
-
-main {
-  display: flex;
-  align-items: unset;
-  justify-content: space-between;
-  min-height: 100%;
-}
-
-article {
-  padding-top: 62px;
-  padding-left: 160px;
+  background-color: snow;
   background-image: url(/images/bg-pattern-desktop.svg);
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: left;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 220px;
+  background-position: left;
+  justify-items: end;
+}
+
+header {
+  padding-bottom: 230px;
+}
+
+article {
+  max-width: 600px;
+  padding-top: 62px;
+  padding-left: 160px;
 }
 
 picture {
+  min-height: 100vh;
+}
+
+picture img {
+  height: 100vh;
   object-fit: cover;
+}
+
+h1 {
+  max-width: 450px;
+  font-weight: 300;
+  font-size: 64px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  color: #ce9797;
+  padding-bottom: 24px;
+}
+
+h1 span {
+  font-weight: 700;
+  color: #413a3a;
+}
+
+p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #ce9797;
+  padding-bottom: 40px;
 }
