--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,14 @@
-@mixin flex($align-items: unset, $justify-content: unset) {
+@mixin simpleFlex($justify-content: unset, $align-items: unset) {
   display: flex;
   align-items: $align-items;
   justify-content: $justify-content;
+}
+
+@mixin flex($direction: unset, $wrap: wrap, $align-content: unset, $justify-content: unset, $align-items: unset) {
+  display: flex;
+  flex-direction: $direction;
+  flex-wrap: $wrap;
+  align-content: $align-content;
+  justify-content: $justify-content;
+  align-items: $align-items;
 }
