--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
 
 @import "reset";
-@import "mediaQueries";
+@import "colors";
 @import "mixins";
+@import "mediaQueries";
 // @import "animations";
 
 body {
@@ -10,21 +11,59 @@ body {
   line-height: 1.3;
   text-rendering: optimizeSpeed;
   font-family: "Josefin Sans", sans-serif;
-}
-
-main {
-  @include flex(unset, space-between);
-  min-height: 100%;
-}
-
-article {
-  padding-top: 62px;
-  padding-left: 160px;
+  background-color: hsl(0, 100%, 99%);
   background-image: url(/images/bg-pattern-desktop.svg);
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: left;
+}
+
+main {
+  // @include simpleFlex(space-between, flex-start);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 220px;
+  background-position: left;
+  justify-items: end;
+}
+
+header {
+  padding-bottom: 230px;
+}
+
+article {
+  max-width: 600px;
+  padding-top: 62px;
+  padding-left: 160px;
 }
 
 picture {
-  object-fit: cover;
+  min-height: 100vh;
+
+  img {
+    height: 100vh;
+    object-fit: cover;
+  }
+}
+
+h1 {
+  max-width: 450px;
+  font-weight: 300;
+  font-size: 64px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  color: $light-orange;
+  padding-bottom: 24px;
+  span {
+    font-weight: 700;
+    color: $black;
+  }
+}
+
+p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: $light-orange;
+  padding-bottom: 40px;
 }
