--- a/css/style.css
+++ b/css/style.css
@@ -102,30 +102,70 @@ body {
   background-color: snow;
   background-image: url(/images/bg-pattern-desktop.svg);
   background-repeat: no-repeat;
-  background-size: contain;
+  object-fit: cover;
+  background-size: 120%;
   background-position: left;
 }
 
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 220px;
+  gap: 13.75rem;
   background-position: left;
   justify-items: end;
 }
 
-header {
-  padding-bottom: 230px;
+@media (max-width: 900px) {
+  main {
+    display: flex;
+    flex-direction: column-reverse;
+    padding-block: 2rem;
+    gap: 1.25rem;
+    text-align: center;
+  }
+}
+
+.logo {
+  display: flex;
+  padding-bottom: 11.25rem;
+}
+
+@media (max-width: 900px) {
+  .logo {
+    display: none;
+  }
+}
+
+.logo-mobile {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  .logo-mobile {
+    display: flex;
+    max-width: 31.25rem;
+    padding-block: 2.1875rem;
+    padding-inline: 2.1875rem;
+  }
 }
 
 article {
-  max-width: 600px;
-  padding-top: 62px;
-  padding-left: 160px;
+  max-width: 37.5rem;
+  padding-top: 3.875rem;
+  padding-left: 10rem;
 }
 
-picture {
-  min-height: 100vh;
+@media (max-width: 900px) {
+  article {
+    display: flex;
+    flex-direction: column;
+    padding-top: unset;
+    padding-left: unset;
+    margin: 0 auto;
+    max-width: 31.25rem;
+    padding-inline: 2.1875rem;
+    padding-bottom: 12.5rem;
+  }
 }
 
 picture img {
@@ -133,14 +173,22 @@ picture img {
   object-fit: cover;
 }
 
+@media (max-width: 900px) {
+  picture img {
+    height: 50vh;
+    width: 100%;
+  }
+}
+
 h1 {
-  max-width: 450px;
+  max-width: 28.125rem;
   font-weight: 300;
-  font-size: 64px;
+  font-size: 4rem;
   line-height: 1.2;
+  letter-spacing: 1rem;
   text-transform: uppercase;
   color: #ce9797;
-  padding-bottom: 24px;
+  padding-bottom: 1.5rem;
 }
 
 h1 span {
@@ -148,10 +196,62 @@ h1 span {
   color: #413a3a;
 }
 
+@media (max-width: 900px) {
+  h1 {
+    padding-top: 3.875rem;
+    font-size: 2.5rem;
+  }
+}
+
 p {
   font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
+  font-size: 1rem;
+  line-height: 1.75rem;
   color: #ce9797;
-  padding-bottom: 40px;
+  padding-bottom: 2.5rem;
+}
+
+form,
+input {
+  all: unset;
+}
+
+label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #ce9797;
+  border: 0.0625rem solid #ce9797;
+  width: 100%;
+  border-radius: 12.5rem;
+  background-color: white;
+}
+
+button {
+  padding: 1.25rem 2.5rem;
+  border-radius: 12.5rem;
+  background: linear-gradient(90deg, #f4b7b6 0%, #f19796 100%);
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  opacity: 70%;
+  transition: all 0.3s ease;
+}
+
+button,
+input,
+label {
+  cursor: pointer;
+}
+
+.icon {
+  display: none;
+  position: relative;
+  right: -3.125rem;
+}
+
+#submitEmail {
+  padding-left: 1.5rem;
 }
